GUI with streaming functionality